Use by default for all JVM runs: -XX:+TieredCompilation -XX:+AggressiveOpts